feat: update exam session parameters in routing and components for improved navigation

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <main class="main">
-    <app-question *ngIf="activeTab === 'left'"></app-question>
-    <app-info *ngIf="activeTab === 'right'"></app-info>
+    <app-question *ngIf="activeTab === 'left'" ></app-question>
+    <app-info *ngIf="activeTab === 'right'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-info>
   </main>
 </div>
