--- a/src/app/pages/student/exam/exam.component.html
+++ b/src/app/pages/student/exam/exam.component.html
@@ -35,14 +35,14 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let exam of filteredExams">
-      <td>
-        <p class="exam-name">{{ exam.name }} - {{ exam.description }}</p>
-        <p class="class-code">Mã lớp: {{ exam.code }}</p>
+    <tr *ngFor="let examSession of filteredExams" (click)="goToExamDetail(examSession)" style="cursor: pointer;">
+    <td>
+        <p class="exam-name">{{ examSession.name }} - {{ examSession.description }}</p>
+        <p class="class-code">Mã lớp: {{ examSession.code }}</p>
       </td>
-      <td>{{ exam.startDate }}</td>
-      <td>{{ exam.endDate }}</td>
-      <td>{{ getStatus(exam.startDate, exam.endDate) }}</td>  <!-- Hiển thị trạng thái -->
+      <td>{{ examSession.startDate }}</td>
+      <td>{{ examSession.endDate }}</td>
+      <td>{{ getStatus(examSession.startDate, examSession.endDate) }}</td>  <!-- Hiển thị trạng thái -->
     </tr>
     </tbody>
   </table>
