--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.scss
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.scss
@@ -23,10 +23,10 @@ li {
 
   .form-wrap {
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     background: #fff;
-    margin-top: 130px;
-    padding: 30px;
+    margin-top: 140px;
+    padding: 30px 30px 40px 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
@@ -42,7 +42,11 @@ li {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 5px;
+    }
+
+    .select-wrapper {
+      margin-bottom: 5px;
     }
 
     .input-wrapper {
@@ -72,43 +76,23 @@ li {
         box-shadow: 0 0 5px $input-focus-color;
       }
 
-      .error {
+      .error-wrap {
         margin-top: 5px;
-        font-size: 0.9rem;
-        color: $error-color;
+        height: 15px;
+
+        .error {
+          font-size: 0.9rem;
+          color: $error-color;
+        }
       }
     }
-  }
-
-  .submit {
-    width: 100%;
-    max-width: 400px;
-    height: 45px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border: none;
-    border-radius: 6px;
-    outline: none;
-    color: #fff;
-    background: $primary-color;
-    font-size: $button-font-size;
-    font-weight: bold;
-    text-align: center;
-    transition: background-color 0.3s, box-shadow 0.3s;
-  }
-
-  .submit:hover {
-    background-color: darken($primary-color, 10%);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
   }
 }
 
 button {
   width: 100%;
   height: 45px;
+  margin-top: 20px;
   background: $primary-color;
   color: #fff;
   border: none;
