--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -20,7 +20,7 @@
     <li (click)="clickActive($event, 'student-list-point')" class="option">
       Thống kê điểm
     </li>
-    <li (click)="clickActive($event, 'exam')" class="option">Đề thi</li>
+    <li (click)="clickActive($event, 'exam-session')" class="option">Đề thi</li>
     <li (click)="clickActive($event, 'question-bank')" class="option">
       Kho câu hỏi
     </li>
@@ -29,7 +29,7 @@
 <main>
   <app-home *ngIf="activeTab === 'home'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-home>
   <app-student-list-point *ngIf="activeTab === 'student-list-point'" [exam_session_id]="exam_session_id" [exam_name]="exam_session_name" [exam_description]="exam_session_description"></app-student-list-point>
-  <app-exam *ngIf="activeTab === 'exam'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-exam>
+  <app-exam *ngIf="activeTab === 'exam-session'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-exam>
   <app-question-bank *ngIf="activeTab === 'question-bank'"></app-question-bank>
 </main>
 </body>
