feat: add manual exam data submission and improve question handling in auto-generate component

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
@@ -20,7 +20,7 @@
       [class.active]="activeTab === 'left'"
       class="tab"
     >
-      <p class="tab-desc">Thông tin câu hỏi</p>
+      <p class="tab-desc">Kho câu hỏi</p>
     </div>
     <div
       (click)="setActiveTab('right')"
