--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -7,52 +7,80 @@
         <div class="input-wrapper">
           <label for="number_of_exam">Số lượng câu hỏi</label>
           <input id="number_of_exam" formControlName="number_of_exam" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
-              examForm.get('number_of_exam')?.invalid &&
-              examForm.get('number_of_exam')?.touched
-            "
-          >
-            Số lượng câu hỏi không được để trống.
-          </div></div>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('number_of_exam')?.invalid &&
+                examForm.get('number_of_exam')?.touched
+              "
+            >
+              Số lượng câu hỏi không được để trống.
+            </div>
+          </div>
         </div>
         <!-- Tên đề thi -->
         <div class="input-wrapper">
           <label for="exam_name">Tên đề thi</label>
           <input id="exam_name" formControlName="exam_name" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
-              examForm.get('exam_name')?.invalid &&
-              examForm.get('exam_name')?.touched
-            "
-          >
-            Tên đề không được để trống.
-          </div></div>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_name')?.invalid &&
+                examForm.get('exam_name')?.touched
+              "
+            >
+              Tên đề không được để trống.
+            </div>
+          </div>
         </div>
       </div>
 
-      <!-- Thời gian làm bài -->
-      <div class="input-wrapper select-wrapper">
-        <label for="exam_duration">Thời gian làm bài:</label>
-        <select id="exam_duration" formControlName="exam_duration">
-          <option value="">-- Chọn thời gian --</option>
-          <option value="15">15 phút</option>
-          <option value="30">30 phút</option>
-          <option value="60">60 phút</option>
-          <option value="90">90 phút</option>
-          <option value="120">120 phút</option>
-        </select>
-        <div class="error-wrap"><div
-          class="error"
-          *ngIf="
-            examForm.get('exam_duration')?.invalid &&
-            examForm.get('exam_duration')?.touched
-          "
-        >
-          Vui lòng chọn thời gian làm bài.
-        </div></div>
+      <div class="row-wrapper">
+        <!-- Thời gian làm bài -->
+        <div class="input-wrapper">
+          <label for="exam_duration">Thời gian làm bài:</label>
+          <select id="exam_duration" formControlName="exam_duration">
+            <option value="">-- Chọn thời gian --</option>
+            <option value="15">15 phút</option>
+            <option value="30">30 phút</option>
+            <option value="60">60 phút</option>
+            <option value="90">90 phút</option>
+            <option value="120">120 phút</option>
+          </select>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_duration')?.invalid &&
+                examForm.get('exam_duration')?.touched
+              "
+            >
+              Vui lòng chọn thời gian làm bài.
+            </div>
+          </div>
+        </div>
+
+        <div class="input-wrapper">
+          <label for="exam_number_of_test">Số đề</label>
+          <input
+            type="text"
+            id="exam_number_of_test"
+            formControlName="exam_number_of_test"
+          />
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_number_of_test')?.invalid &&
+                examForm.get('exam_number_of_test')?.touched
+              "
+            >
+              Số đề không được để trống.
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="row-wrapper">
@@ -66,15 +94,17 @@
         <div class="input-wrapper">
           <label for="exam_subject">Môn thi</label>
           <input id="exam_subject" formControlName="exam_subject" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
-              examForm.get('exam_subject')?.invalid &&
-              examForm.get('exam_subject')?.touched
-            "
-          >
-            Tên môn học không được để trống.
-          </div></div>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_subject')?.invalid &&
+                examForm.get('exam_subject')?.touched
+              "
+            >
+              Tên môn học không được để trống.
+            </div>
+          </div>
         </div>
       </div>
 
@@ -87,15 +117,17 @@
             type="datetime-local"
             formControlName="exam_start_date"
           />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
-              examForm.get('exam_start_date')?.invalid &&
-              examForm.get('exam_start_date')?.touched
-            "
-          >
-            Vui lòng chọn thời gian bắt đầu.
-          </div></div>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_start_date')?.invalid &&
+                examForm.get('exam_start_date')?.touched
+              "
+            >
+              Vui lòng chọn thời gian bắt đầu.
+            </div>
+          </div>
         </div>
 
         <!-- Thời gian kết thúc -->
@@ -106,19 +138,21 @@
             type="datetime-local"
             formControlName="exam_end_date"
           />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
-              examForm.get('exam_end_date')?.invalid &&
-              examForm.get('exam_end_date')?.touched
-            "
-          >
-            Vui lòng chọn thời gian kết thúc.
-          </div></div>
+          <div class="error-wrap">
+            <div
+              class="error"
+              *ngIf="
+                examForm.get('exam_end_date')?.invalid &&
+                examForm.get('exam_end_date')?.touched
+              "
+            >
+              Vui lòng chọn thời gian kết thúc.
+            </div>
+          </div>
         </div>
       </div>
 
-      <button type="submit" [disabled]="examForm.invalid">Tạo kỳ thi</button>
+      <button type="submit" [disabled]="examForm.invalid" (click)="sendQuestionsToBackend()">Tạo bài thi</button>
     </form>
   </div>
 </div>
