--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -6,37 +6,41 @@
       <div class="row-wrapper">
         <div class="input-wrapper">
           <label for="number_of_exam">Số lượng câu hỏi</label>
-          <input id="number_of_exam" formControlName="number_of_exam" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
+          <input formControlName="number_of_exam" id="number_of_exam"/>
+          <div class="error-wrap">
+            <div
+              *ngIf="
               examForm.get('number_of_exam')?.invalid &&
               examForm.get('number_of_exam')?.touched
             "
-          >
-            Số lượng câu hỏi không được để trống.
-          </div></div>
+              class="error"
+            >
+              Số lượng câu hỏi không được để trống.
+            </div>
+          </div>
         </div>
         <!-- Tên đề thi -->
         <div class="input-wrapper">
           <label for="exam_name">Tên đề thi</label>
-          <input id="exam_name" formControlName="exam_name" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
+          <input formControlName="exam_name" id="exam_name"/>
+          <div class="error-wrap">
+            <div
+              *ngIf="
               examForm.get('exam_name')?.invalid &&
               examForm.get('exam_name')?.touched
             "
-          >
-            Tên đề không được để trống.
-          </div></div>
+              class="error"
+            >
+              Tên đề không được để trống.
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Thời gian làm bài -->
       <div class="input-wrapper select-wrapper">
         <label for="exam_duration">Thời gian làm bài:</label>
-        <select id="exam_duration" formControlName="exam_duration">
+        <select formControlName="exam_duration" id="exam_duration">
           <option value="">-- Chọn thời gian --</option>
           <option value="15">15 phút</option>
           <option value="30">30 phút</option>
@@ -44,37 +48,41 @@
           <option value="90">90 phút</option>
           <option value="120">120 phút</option>
         </select>
-        <div class="error-wrap"><div
-          class="error"
-          *ngIf="
+        <div class="error-wrap">
+          <div
+            *ngIf="
             examForm.get('exam_duration')?.invalid &&
             examForm.get('exam_duration')?.touched
           "
-        >
-          Vui lòng chọn thời gian làm bài.
-        </div></div>
+            class="error"
+          >
+            Vui lòng chọn thời gian làm bài.
+          </div>
+        </div>
       </div>
 
       <div class="row-wrapper">
         <!-- Mô tả -->
         <div class="input-wrapper">
           <label for="exam_description">Lưu ý</label>
-          <input id="exam_description" formControlName="exam_description" />
+          <input formControlName="exam_description" id="exam_description"/>
         </div>
 
         <!-- Môn thi -->
         <div class="input-wrapper">
           <label for="exam_subject">Môn thi</label>
-          <input id="exam_subject" formControlName="exam_subject" />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
+          <input formControlName="exam_subject" id="exam_subject"/>
+          <div class="error-wrap">
+            <div
+              *ngIf="
               examForm.get('exam_subject')?.invalid &&
               examForm.get('exam_subject')?.touched
             "
-          >
-            Tên môn học không được để trống.
-          </div></div>
+              class="error"
+            >
+              Tên môn học không được để trống.
+            </div>
+          </div>
         </div>
       </div>
 
@@ -83,42 +91,46 @@
         <div class="input-wrapper">
           <label for="exam_start_date">Thời gian bắt đầu:</label>
           <input
+            formControlName="exam_start_date"
             id="exam_start_date"
             type="datetime-local"
-            formControlName="exam_start_date"
           />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
+          <div class="error-wrap">
+            <div
+              *ngIf="
               examForm.get('exam_start_date')?.invalid &&
               examForm.get('exam_start_date')?.touched
             "
-          >
-            Vui lòng chọn thời gian bắt đầu.
-          </div></div>
+              class="error"
+            >
+              Vui lòng chọn thời gian bắt đầu.
+            </div>
+          </div>
         </div>
 
         <!-- Thời gian kết thúc -->
         <div class="input-wrapper">
           <label for="exam_end_date">Thời gian kết thúc:</label>
           <input
+            formControlName="exam_end_date"
             id="exam_end_date"
             type="datetime-local"
-            formControlName="exam_end_date"
           />
-          <div class="error-wrap"><div
-            class="error"
-            *ngIf="
+          <div class="error-wrap">
+            <div
+              *ngIf="
               examForm.get('exam_end_date')?.invalid &&
               examForm.get('exam_end_date')?.touched
             "
-          >
-            Vui lòng chọn thời gian kết thúc.
-          </div></div>
+              class="error"
+            >
+              Vui lòng chọn thời gian kết thúc.
+            </div>
+          </div>
         </div>
       </div>
 
-      <button type="submit" [disabled]="examForm.invalid">Tạo kỳ thi</button>
+      <button [disabled]="examForm.invalid" type="submit">Tạo kỳ thi</button>
     </form>
   </div>
 </div>
