--- a/src/app/pages/student/do-test/do-test.component.html
+++ b/src/app/pages/student/do-test/do-test.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="exam-file">
-
+    <ngx-doc-viewer [url]="fileUrl" viewer="url" style="width:100%; height:97%;"></ngx-doc-viewer>
   </div>
   <div class="do-test">
     <div class="counter-wrap">
@@ -10,11 +10,13 @@
       </div>
     </div>
     <div class="answer-sheet">
-      <input [value]="subject" class="subject" readonly type="text">
+      <div class="subject">
+        {{this.exam?.name}}
+      </div>
 
       <h3>Phiếu trả lời</h3>
 
-      <div class="grid">
+      <div class="grid" #questionGrid>
         <button (click)="selectQuestion(i)"
                 *ngFor="let answer of answers; let i = index"
                 [class.answered]="answers[i] !== ''"
@@ -23,15 +25,27 @@
         </button>
       </div>
 
-      <div *ngIf="selectedQuestionIndex !== null" class="answer-buttons">
-        <button (click)="updateAnswer('A')" [class.selected-answer]="answers[selectedQuestionIndex] === 'A'">A
-        </button>
-        <button (click)="updateAnswer('B')" [class.selected-answer]="answers[selectedQuestionIndex] === 'B'">B
-        </button>
-        <button (click)="updateAnswer('C')" [class.selected-answer]="answers[selectedQuestionIndex] === 'C'">C
-        </button>
-        <button (click)="updateAnswer('D')" [class.selected-answer]="answers[selectedQuestionIndex] === 'D'">D
-        </button>
+      <div *ngIf="selectedQuestionIndex !== null" class="answer-buttons" #answerButtons>
+        <button (click)="updateAnswer('A')" [class.selected-answer]="answers[selectedQuestionIndex] === 'A'">A</button>
+        <button (click)="updateAnswer('B')" [class.selected-answer]="answers[selectedQuestionIndex] === 'B'">B</button>
+        <button (click)="updateAnswer('C')" [class.selected-answer]="answers[selectedQuestionIndex] === 'C'">C</button>
+        <button (click)="updateAnswer('D')" [class.selected-answer]="answers[selectedQuestionIndex] === 'D'">D</button>
+      </div>
+
+      <div class="confirm-modal" *ngIf="showConfirmModal">
+        <div class="modal-content">
+          <h3>Xác nhận nộp bài</h3>
+          <p>Bạn có chắc chắn muốn nộp bài thi?</p>
+
+          <div class="summary" *ngIf="getUnansweredCount() > 0">
+            <p class="warning">Bạn còn {{ getUnansweredCount() }} câu hỏi chưa trả lời!</p>
+          </div>
+
+          <div class="modal-buttons">
+            <button class="cancel-btn" (click)="cancelSubmit()">Quay lại làm bài</button>
+            <button class="confirm-btn" (click)="confirmSubmit()">Xác nhận nộp bài</button>
+          </div>
+        </div>
       </div>
 
       <button (click)="submit()" class="submit-btn">Nộp bài</button>
