feat: implement user navigation and enhance user information handling in components

--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -31,7 +31,7 @@
     <!-- Phần thông tin cá nhân -->
     <div class="personal-info-section">
       <h2>Thông tin cá nhân</h2>
-      <form>
+      <form (ngSubmit)="saveInfo()"  [formGroup]="userForm">
         <div class="form-group">
           <input [value]="UserInfo.user.fullName" id="fullname" name="fullname" placeholder="Họ tên" type="text">
         </div>
