--- a/src/app/pages/user/teacher-user/teacher-user.component.html
+++ b/src/app/pages/user/teacher-user/teacher-user.component.html
@@ -1,4 +1,4 @@
-<app-user-form>
+<app-user-form [onGetInfo] ="onGetUserInfo" [UserInfo] = "userInfo">
   <div role="note">Giáo viên</div>
 
 </app-user-form>
