Question + Answer API

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -152,7 +152,7 @@
         </div>
       </div>
 
-      <button type="submit" [disabled]="examForm.invalid" (click)="sendQuestionsAndAnswersSequentially()">Tạo bài thi</button>
+      <button type="submit" [disabled]="examForm.invalid" (click)="handleSubmitAll()">Tạo bài thi</button>
     </form>
   </div>
 </div>
