--- a/src/app/pages/student/do-test/do-test.component.html
+++ b/src/app/pages/student/do-test/do-test.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="exam-file">
-    <ngx-doc-viewer [url]="fileUrl" viewer="url" style="width:100%; height:97%;"></ngx-doc-viewer>
+    <ngx-doc-viewer [url]="fileUrl" style="width:100%; height:97%;" viewer="url"></ngx-doc-viewer>
   </div>
   <div class="do-test">
     <div class="counter-wrap">
@@ -11,12 +11,12 @@
     </div>
     <div class="answer-sheet">
       <div class="subject">
-        {{this.exam?.name}}
+        {{ this.exam?.name }}
       </div>
 
       <h3>Phiếu trả lời</h3>
 
-      <div class="grid" #questionGrid>
+      <div #questionGrid class="grid">
         <button (click)="selectQuestion(i)"
                 *ngFor="let answer of answers; let i = index"
                 [class.answered]="answers[i] !== ''"
@@ -25,25 +25,25 @@
         </button>
       </div>
 
-      <div *ngIf="selectedQuestionIndex !== null" class="answer-buttons" #answerButtons>
+      <div #answerButtons *ngIf="selectedQuestionIndex !== null" class="answer-buttons">
         <button (click)="updateAnswer('A')" [class.selected-answer]="answers[selectedQuestionIndex] === 'A'">A</button>
         <button (click)="updateAnswer('B')" [class.selected-answer]="answers[selectedQuestionIndex] === 'B'">B</button>
         <button (click)="updateAnswer('C')" [class.selected-answer]="answers[selectedQuestionIndex] === 'C'">C</button>
         <button (click)="updateAnswer('D')" [class.selected-answer]="answers[selectedQuestionIndex] === 'D'">D</button>
       </div>
 
-      <div class="confirm-modal" *ngIf="showConfirmModal">
+      <div *ngIf="showConfirmModal" class="confirm-modal">
         <div class="modal-content">
           <h3>Xác nhận nộp bài</h3>
           <p>Bạn có chắc chắn muốn nộp bài thi?</p>
 
-          <div class="summary" *ngIf="getUnansweredCount() > 0">
+          <div *ngIf="getUnansweredCount() > 0" class="summary">
             <p class="warning">Bạn còn {{ getUnansweredCount() }} câu hỏi chưa trả lời!</p>
           </div>
 
           <div class="modal-buttons">
-            <button class="cancel-btn" (click)="cancelSubmit()">Quay lại làm bài</button>
-            <button class="confirm-btn" (click)="confirmSubmit()">Xác nhận nộp bài</button>
+            <button (click)="cancelSubmit()" class="cancel-btn">Quay lại làm bài</button>
+            <button (click)="confirmSubmit()" class="confirm-btn">Xác nhận nộp bài</button>
           </div>
         </div>
       </div>
