--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
@@ -33,7 +33,8 @@
 
   <main class="main">
     <app-question *ngIf="activeTab === 'left'"></app-question>
-    <app-info *ngIf="activeTab === 'right'" [exam_session_description]="exam_session_description" [exam_session_id]="exam_session_id"
+    <app-info *ngIf="activeTab === 'right'" [exam_session_description]="exam_session_description"
+              [exam_session_id]="exam_session_id"
               [exam_session_name]="exam_session_name"></app-info>
   </main>
 </div>
