--- a/src/app/pages/user/student-user/student-user.component.html
+++ b/src/app/pages/user/student-user/student-user.component.html
@@ -1,4 +1,4 @@
-<app-user-form [onGetInfo] ="onGetUserInfo" [UserInfo] = "userInfo"  >
+<app-user-form [UserInfo]="userInfo" [onGetInfo]="onGetUserInfo">
   <div role="note">Học sinh</div>
 
 </app-user-form>
