--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -13,9 +13,10 @@
   <div class="content">
     <!-- Phần avatar và thông tin người dùng -->
     <div class="profile">
-      <img alt="mặt Tỏ" class="avatar" id="avatar-image" src="https://images.aeonmedia.co/images/acd6897d-9849-4188-92c6-79dabcbcd518/essay-final-gettyimages-685469924.jpg?width=3840&quality=75&format=auto">
+      <img alt="mặt Tỏ" class="avatar" id="avatar-image"
+           src="https://images.aeonmedia.co/images/acd6897d-9849-4188-92c6-79dabcbcd518/essay-final-gettyimages-685469924.jpg?width=3840&quality=75&format=auto">
       <div class="profile-info">
-        <div class="profile-name">{{UserInfo.user.fullName}}</div>
+        <div class="profile-name">{{ UserInfo.user.fullName }}</div>
         <!-- Input file ẩn -->
         <input accept="image/*" id="avatar-upload" style="display: none;" type="file">
         <!-- Nút thay đổi ảnh đại diện -->
@@ -31,7 +32,7 @@
     <!-- Phần thông tin cá nhân -->
     <div class="personal-info-section">
       <h2>Thông tin cá nhân</h2>
-      <form (ngSubmit)="saveInfo()"  [formGroup]="userForm">
+      <form (ngSubmit)="saveInfo()" [formGroup]="userForm">
         <div class="form-group">
           <input [value]="UserInfo.user.fullName" id="fullname" name="fullname" placeholder="Họ tên" type="text">
         </div>
@@ -61,7 +62,8 @@
       <div class="account-info">
         <form>
           <div class="form-group">
-            <input [value]="UserInfo.user.username" id="phone-email" name="phone-email" placeholder="Số điện thoại hoặc email" type="text">
+            <input [value]="UserInfo.user.username" id="phone-email" name="phone-email"
+                   placeholder="Số điện thoại hoặc email" type="text">
           </div>
 
           <!-- Phần đổi mật khẩu -->
